# reddit-bias-perception

./: .env.example  .gitignore  .pre-commit-config.yaml  AIGenArt_posts_v2.csv  Makefile  README.md  analyze_subreddits.py  config.py  depression_posts.csv  main.py  make_test_fixture.py  pipeline_main.py  pyproject.toml  reddit.duckdb  requirements.txt  summarize_filtered.py  summary.ipynb  worldnews_posts_v2.csv
analysis/: bertopic_model.py  emotion_clustering.py  emotion_manova.py  emotion_mean_plot.py  sentiment_analysis.py  sentiment_analysis_vllm.py
config/: ai_keywords.json  bias_keywords.csv  bias_keywords.json  blacklist_words.json  config.py  emotion_mapping.json  fewshot_prompt_template.j2  keywords_processing.py  subreddit_groups.csv  subreddit_groups.json
duckdb/: duckdb_pipeline.py  python_pipeline.py  subreddit_groups.csv
filtering/: keyword_filter.py  llm_few_shot.py
notebooks/: sanity_check.ipynb  sentiment_test_runner.py
preprocessing/: clean_text.py
processing/: clean_text.py  duckdb_data_processing.py  duckdb_pipeline.py  duckdb_run_all.py  keyword_filter.py  llm_few_shot.py  llm_few_shot_pipeline.py  llm_post_processing.py  llm_propmts.py  processing_pipeline_main.py  python_pipeline.py  run_pipeline.py  schema.py  utils_technical_filter.py
reddit_crawler/: main.py  reddit_client.py  subreddit_fetcher.py  utils.py
templates/: fewshot_prompt_template.j2
tests/: test_crawling.py  test_llm_few_shot.py  test_llm_few_shot_integration.py  test_reddit_client.py  test_sentiment_analysis.py
torrent/: bias_keywords.csv  duckdb_pipeline.py  (+6 more)
(+86 files in other folders)
